fix(overflow-y): responsivity, command section now scrolls instead of overflowing

--- a/Page/source/css/main.css
+++ b/Page/source/css/main.css
@@ -106,9 +106,11 @@ body {
 .command-container {
     max-width: 768px;
 }
+
 .command-paragraph {
     margin-bottom: 1rem;
 }
+
 .command-code {
     background-color: var(--bg1);
     border-radius: 1rem .5rem;
@@ -116,4 +118,9 @@ body {
     padding: 1rem;
     margin-top: 1rem;
     display: block;
+}
+
+.command-list {
+    overflow-y: scroll;
+    max-height: 400px;
 }
